<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.SearchActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingBottom="@dimen/_5sdp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/searchSelectClass_SP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Select Class" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_CAC7C7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:text="@string/education_board"
                    android:textColor="@color/black_333333"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/educationBoard_SP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Select Class" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_CAC7C7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:text="@string/subject"
                    android:textColor="@color/black_333333"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/subject_SP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Select Class" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_CAC7C7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:text="@string/book_type"
                    android:textColor="@color/black_333333"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/bookType_SP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Select" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_CAC7C7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:text="@string/writer"
                    android:textColor="@color/black_333333"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/writer_SP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Select" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_CAC7C7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:text="@string/learning_type"
                    android:textColor="@color/black_333333"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="Search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>